<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="note_title_hint">Title note</string>
    <string name="note_text_hint">Text note</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="send_mail">Send as email</string>
    <string name="show_camera">Show camera</string>
    <string name="cancel_action">Cancel</string>
    <string name="next_action">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nav_notes">Notes</string>
    <string name="menu_nav_courses">Courses</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_nav_share">Share</string>
    <string name="menu_nav_send">Send</string>
    <string name="nav_share_message">Don\'t you think you\'re shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="backup_file">notekeper_backup_file</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="pref_section_general">General</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="pref_display_name">Display name</string>
    <string name="pref_default_name">Your name</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_email_address">Email address</string>
    <string name="pref_default_email_address">yourname@yourhost.com</string>
    <string name="pref_favorite_social">Favorite social network</string>
    <string name="pref_default_favorite_social">https://facebook.com</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="channel_name">channel1</string>
    <string name="channel_description">My NoteKeeper Notification1</string>
    <string name="action_backup_notes">Backup notes</string>
    <string name="action_upload_notes">Upload Notes</string>
</resources>
